# RoutingKit

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  doxygen_cfg.conf  generate_make_file  go.mod  google_test.cpp  google_test_sanity.cpp  pitcairn.pbf  routingkit.pc.in  routingkitConfig.cmake.in  setups-hints.txt  test_1.cpp  test_2.cpp  test_3.cpp
RC/jupyter/: ACES PROJ.ipynb
RC/vivado/: design_1.bit  design_1.hwh
cmd/dre/: dre.go
doc/: ContractionHierarchy.md  CoordinatesToNodeID.md  CustomizableContractionHierarchy.md  OpenStreetMap.md  OpenStreetMap_Bicycle_Direction.md  Setup.md  SupportFunctions.md
doc/html/: all_8h_source.html  annotated.html  bit__select_8h_source.html  bit__vector_8h_source.html  buffered__asynchronous__reader_8h_source.html  classRoutingKit_1_1BitVector-members.html  classRoutingKit_1_1BitVector.html  classRoutingKit_1_1BitVector__coll__graph.map  classRoutingKit_1_1BitVector__coll__graph.md5  classRoutingKit_1_1BlockingFlow-members.html  classRoutingKit_1_1BlockingFlow.html  classRoutingKit_1_1BufferedAsynchronousReader-members.html  classRoutingKit_1_1BufferedAsynchronousReader.html  classRoutingKit_1_1ContractionHierarchy-members.html  classRoutingKit_1_1ContractionHierarchy.html  classRoutingKit_1_1ContractionHierarchyQuery-members.html  classRoutingKit_1_1ContractionHierarchyQuery.html  classRoutingKit_1_1ContractionHierarchyQuery__coll__graph.map  classRoutingKit_1_1ContractionHierarchyQuery__coll__graph.md5  classRoutingKit_1_1ContractionHierarchy__coll__graph.map  classRoutingKit_1_1ContractionHierarchy__coll__graph.md5  classRoutingKit_1_1Dijkstra-members.html  classRoutingKit_1_1Dijkstra.html  classRoutingKit_1_1FileDataSource-members.html  classRoutingKit_1_1FileDataSource.html  classRoutingKit_1_1GeoPositionToNode-members.html  classRoutingKit_1_1GeoPositionToNode.html  classRoutingKit_1_1IDMapper-members.html  classRoutingKit_1_1IDMapper.html  classRoutingKit_1_1IDMapper__inherit__graph.map  classRoutingKit_1_1IDMapper__inherit__graph.md5  classRoutingKit_1_1IDSetMinQueue-members.html  classRoutingKit_1_1IDSetMinQueue.html  classRoutingKit_1_1LocalIDMapper-members.html  classRoutingKit_1_1LocalIDMapper.html  classRoutingKit_1_1LocalIDMapper__inherit__graph.map  classRoutingKit_1_1LocalIDMapper__inherit__graph.md5  classRoutingKit_1_1MinIDQueue-members.html  classRoutingKit_1_1MinIDQueue.html  classRoutingKit_1_1ScalarGetWeight-members.html  (+236 more)
doc/latex/: annotated.tex  classRoutingKit_1_1BitVector.tex  classRoutingKit_1_1BitVector__coll__graph.md5  classRoutingKit_1_1BlockingFlow.tex  classRoutingKit_1_1BufferedAsynchronousReader.tex  classRoutingKit_1_1ContractionHierarchy.tex  classRoutingKit_1_1ContractionHierarchyQuery.tex  classRoutingKit_1_1ContractionHierarchyQuery__coll__graph.md5  classRoutingKit_1_1ContractionHierarchy__coll__graph.md5  classRoutingKit_1_1Dijkstra.tex  classRoutingKit_1_1FileDataSource.tex  classRoutingKit_1_1GeoPositionToNode.tex  classRoutingKit_1_1IDMapper.tex  classRoutingKit_1_1IDMapper__coll__graph.md5  classRoutingKit_1_1IDSetMinQueue.tex  classRoutingKit_1_1LocalIDMapper.tex  classRoutingKit_1_1LocalIDMapper__inherit__graph.md5  classRoutingKit_1_1MinIDQueue.tex  classRoutingKit_1_1ScalarGetWeight.tex  classRoutingKit_1_1TagMap.tex  classRoutingKit_1_1TimestampFlags.tex  hierarchy.tex  index.tex  md_README.tex  namespaceRoutingKit.tex  namespaces.tex  refman.tex  structPoint.tex  structRoutingKit_1_1BitVector_1_1Uninitialized.tex  structRoutingKit_1_1BufferedAsynchronousReader_1_1Impl.tex  structRoutingKit_1_1ContractionHierarchyExtraWeight.tex  structRoutingKit_1_1ContractionHierarchy_1_1Side.tex  structRoutingKit_1_1ContractionHierarchy_1_1Side__coll__graph.md5  structRoutingKit_1_1CustomizableContractionHierarchy.tex  structRoutingKit_1_1CustomizableContractionHierarchyMetric.tex  structRoutingKit_1_1CustomizableContractionHierarchyMetric__coll__graph.md5  structRoutingKit_1_1CustomizableContractionHierarchyParallelization.tex  structRoutingKit_1_1CustomizableContractionHierarchyParallelization__coll__graph.md5  structRoutingKit_1_1CustomizableContractionHierarchyPartialCustomization.tex  structRoutingKit_1_1CustomizableContractionHierarchyPartialCustomization__coll__graph.md5  (+33 more)
example/: example1.cpp
examples/index-caching/: Makefile  README.md  index-load-from-disk.cpp  index-save-to-disk.cpp
google_test/: test_basic_features.cpp  test_buffered_asynchronous_reader.cpp  test_contraction_hierarchy_extra_weight.cpp  test_customizable_contraction_hierarchy.cpp  test_customizable_contraction_hierarchy_customization.cpp  test_customizable_contraction_hierarchy_pinned_query.cpp  test_customizable_contraction_hierarchy_reset.cpp  test_dijkstra.cpp  test_geo_dist.cpp  test_id_mapper.cpp  test_id_set_queue.cpp  test_inverse_vector.cpp  test_nearest_neighbor.cpp  test_nested_dissection.cpp  test_permutation.cpp  test_protobuf.cpp  test_sort.cpp  test_strongly_connected_component.cpp  test_tag_map.cpp
include/routingkit/: all.h  basic_api.h  bit_vector.h  constants.h  contraction_hierarchy.h  customizable_contraction_hierarchy.h  (+25 more)
src/: basic_api.cpp  bit_select.cpp  bit_select.h  bit_vector.cpp  buffered_asynchronous_reader.cpp  buffered_asynchronous_reader.h  compare_vector.cpp  compute_contraction_hierarchy.cpp  compute_geographic_distance_weights.cpp  compute_nested_dissection_order.cpp  contraction_hierarchy.cpp  convert_road_dimacs_coordinates.cpp  convert_road_dimacs_graph.cpp  customizable_contraction_hierarchy.cpp  decode_vector.cpp  dijkstra.h  emulate_gcc_builtin.h  encode_vector.cpp  examine_ch.cpp  expect.cpp  expect.h  export_road_dimacs_graph.cpp  file_data_source.cpp  file_data_source.h  generate_constant_vector.cpp  generate_dijkstra_rank_test_queries.cpp  generate_random_node_list.cpp  generate_random_source_times.cpp  generate_test_queries.cpp  geo_dist.cpp  geo_position_to_node.cpp  google_polyline.cpp  graph_to_dot.cpp  graph_to_svg.cpp  graph_util.cpp  id_mapper.cpp  nested_dissection.cpp  osm_decoder.cpp  osm_extract.cpp  osm_graph_builder.cpp  (+48 more)
(+108 files in other folders)
